--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,8 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
 }
 /* Background color & fonts */
 body{
@@ -89,7 +89,7 @@ body{
     display: block;
     margin-left:auto;
     margin-right:auto;
-    width: 50%;
+    width: 80%;
     border-radius: 50%;
 }
 
@@ -108,13 +108,15 @@ header {
     display: flex;
     flex-direction: row;
     font-size: 30px;
-    flex-wrap: wrap;
 }
   
 .flex-item-left {
     padding: 10px;
     flex: 50%;
     margin-top: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-left: auto;
     text-align: left;
 }
 
@@ -131,12 +133,12 @@ header {
 }
 
 @media (max-width: 800px) {
-    .flex-container {
-      flex-direction: column;
-      text-align: center;
-      flex-flow: row-reverse wrap-reverse;
-    }
+  .flex-container {
+    flex: 100%;
+    flex-direction: column;
+    flex-flow: row-reverse wrap-reverse;
   }
+}
 
 /* Download Button color */
 .Download-button{
@@ -170,4 +172,16 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+h6{
+  font-size: 60%;
+}
+
+h3{
+  font-size: 70%;
+}
+
+h1{
+  font-size: 150%;
 }
